# wispy

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
docs/: getting-started.md  index.md
docs/concepts/: errors.md  lifecycle.md  protocol.md  transport.md
docs/development/: contributing.md  testing.md
docs/guides/: cli.md  config-file.md  embed-library.md
docs/reference/: api.md  exit-codes.md  methods.md
src/wispy/: __init__.py  __main__.py  config.py  dispatcher.py  endpoints.py  errors.py  framing.py  lifecycle.py  protocol.py  registry.py  server.py  transport.py
src/wispy/cli/: __init__.py  _exit_codes.py  client.py  fallback.py  main.py  state.py
tests/integration/: test_cli_fallback_e2e.py  test_cli_modes_e2e.py  test_lifecycle_runtime.py  test_stdio_transport.py
tests/property/: test_capabilities.py  test_cli_exit_codes.py  test_cli_param_merge.py  test_dispatch_handler.py  test_dispatcher_errors.py  test_dispatcher_protocol.py  test_environment_model.py  test_error_codes.py  test_fallback_persistence.py  test_framing.py  test_lifecycle_fsm.py  test_registry.py  test_subprocess_handler.py
tests/unit/: test_cli_args.py  test_config_loader.py  test_endpoints.py  test_errors.py  test_fallback_edge_cases.py  test_protocol.py
