[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wispy"
version = "0.1.0"
description = "The whitespace between your workflow tool and everything that talks to it. A Python library providing the JSON-RPC server for the Workflow Server Protocol (WSP)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "workflow",
    "environment"
]
authors = [
     { name = "Cary Hawkins", email = "hawkinscary23@gmail.com" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "tomli; python_version < \"3.11\"",
]

[project.urls]
Homepage = ""
Sponsor = "https://github.com/sponsors/cjames23"
History = ""
Tracker = "https://github.com/cjames23/wispy/issues"
Source = "https://github.com/cjames23/wispy/"

[project.scripts]
wsp = "wispy.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wispy"]

[tool.hatch.envs.hatch-test]
parallel = true
extra-dependencies = [
    "hypothesis",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.14t", "3.13", "3.12", "3.11", "3.10"]


[tool.hatch.envs.hatch-check-types]
extra-dependencies = [
  "hypothesis",
]

# Documentation environment. Build the site with `hatch run docs:build`,
# preview locally with `hatch run docs:serve`, and deploy with
# `hatch run docs:deploy`.
[tool.hatch.envs.docs]
detached = true
dependencies = [
  "zensical",
]

[tool.hatch.envs.docs.scripts]
serve = "zensical serve {args}"
build = "zensical build {args}"
deploy = "zensical gh-deploy --force {args}"

[tool.pyrefly]
preset = "strict"
